--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
       <h1 class="main-text">here is a clicker game I have made for you to play:</h1>
-      <embed class="fun-part" id="clicker-game" width="118%" height="570px" src="file:///C:/Users/Ved/web%20development%20and%20robotics%20for%20ved/web%20development/websites%20and%20programs/youtube%20websites/myveryownclickergame.html">
+      <embed class="fun-part" id="clicker-game" width="118%" height="570px" src="myveryownclickergame.html">
     </main>
   </body>
 </html>
